# Genai_app_deploy

./: README.md  genai_app.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yaml
genai_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
