[project]
name = "genai-app"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.5",
    "pydantic==2.9.2",
    "google-genai==1.5.0",
    "uvicorn==0.30.1",
    "python-dotenv==1.0.0",
    "huggingface_hub",
    "gradio==5.9.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
